--- a/beasts.json
+++ b/beasts.json
@@ -600,6 +600,14 @@
         "unlock_tip": "Kill treant"
     },
     {
+        "id": "Turtle",
+        "description": "Reptilian creatures found throughout Tyria's seas. Includes both turtles and tortoises.",
+        "category": "Wildlife",
+        "image": "https://wiki.guildwars2.com/images/thumb/2/26/Sea_Turtle_%28Sandswept_Isles%29.jpg/120px-Sea_Turtle_%28Sandswept_Isles%29.jpg",
+        "unlock_achievement": 6408,
+        "unlock_tip": "Feed your personal turtle"
+    },
+    {
         "id": "Vampire Beast",
         "description": "Bloodthirsty creatures that inhabit the Crystal Desert and the Heart of Maguuma. They resemble four-legged bats and are found in packs inside ruins or caves.",
         "category": "Wildlife",
