--- a/categories/beasts.json
+++ b/categories/beasts.json
@@ -787,8 +787,8 @@
                 "id": "Warden",
                 "description": "Ancient and mysterious plant-like protectors of the Echovald Forest.",
                 "icon": "https:\/\/wiki.guildwars2.com\/images\/thumb\/d\/d5\/Warden_concept_art.jpg\/82px-Warden_concept_art.jpg",
-                "unlock_achievement": 6472,
-                "unlock_tip": "Get involved with Echovald Wardens"
+                "unlock": 6472,
+                "unlock_txt": "Get involved with Echovald Wardens"
             },
             {
                 "id": "Wintersday toy",
