--- a/beasts.json
+++ b/beasts.json
@@ -291,7 +291,7 @@
         "id": "Soo-Won",
         "description": "Soo-Won is the Elder Dragon of Water, often referred to as the Water Dragon or the Deep Sea Dragon, and the second Elder Dragon to awaken in modern times.",
         "category": "Elder Dragons",
-        "image": "https://wiki.guildwars2.com/images/thumb/e/e3/Soo-Won_portrait.png/200px-Soo-Won_portrait.png",
+        "image": "https://wiki.guildwars2.com/images/thumb/b/b8/Soo-Won.jpg/240px-Soo-Won.jpg",
         "unlock": 6496,
         "unlock_tip": "Defeat Soo-Won"
     },
@@ -507,7 +507,7 @@
         "id": "Leviathan",
         "description": "Large and ancient sea creatures said to date back to the previous rise of the Elder Dragons, if not further. They inhabit the depths of the Sea of Sorrows and the Unending Ocean, and once inhabited the Crystal Sea as well.",
         "category": "Wildlife",
-        "image": "https://wiki.guildwars2.com/images/thumb/f/f1/Bestiary_leviathan.jpg/120px-Bestiary_leviathan.jpg",
+        "image": "https://wiki.guildwars2.com/images/thumb/1/18/Leviathan_render.jpg/200px-Leviathan_render.jpg",
         "unlock_achievement": 81,
         "unlock_tip": "Find a leviathan corpse in Claw Island"
     },
